# rust_mmv_project

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  main.rs
src/filename_operations/: matched.rs  mod.rs  modified.rs  operations.rs
src/files/: files.rs  mod.rs  move.rs  tests.rs
tests/: config.rs  tests.rs
tests/configs/: common_settings.yaml
tests/utils/: file_manager.rs  mod.rs  run.rs  utils.rs
