[[bin]]
name = "mmv"
path = "src/main.rs"

[lib]
name = "mmv"
path = "src/lib.rs"

[package]
name = "mmv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6" , features = ["derive"]}
thiserror = { version = "1.0.49", features = [] }
regex = "1.0.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
